# flakana

./: flake.nix  init.nu  justfile  priv.nix
modules/: alacritty.nix  basic-cli-tools.nix  basic-gui-apps.nix  fonts.nix  git.nix  jujutsu.nix  nix.nix  pipewire.nix
modules/flake-toplevel/: deploy-rs.nix  home-configurations.nix  lib.nix  nix-on-droid-configurations.nix  nixos-configurations.nix  nixpkgs-instances.nix  vaultix.nix
modules/hosts/: host-info.nix
modules/hosts/mutsumi/: cross-build.nix  docker.nix  flake-nixos-configuration.nix  nix.nix  nixos.nix  user.nix  wsl.nix
modules/hosts/sakiko/: _hardware-configuration.nix  boot.nix  cross-build.nix  fcitx.nix  flake-nixos-configuration.nix  gamepad.nix  gaming.nix  greetd.nix  incus.nix  kde.nix  mihomo.nix  networking.nix  nix-index.nix  nix.nix  nixos.nix  ntfs.nix  nvidia.nix  pipewire.nix  podman.nix  power-management.nix  proxy.nix  scheduler.nix  steam.nix  theme.nix  udisks.nix  user.nix  vm.nix  wacom.nix  waydroid.nix
modules/hosts/tomori/: _hardware-configuration.nix  acme.nix  alist.nix  boot.nix  deploy-rs.nix  flake-nixos-configuration.nix  (+13 more)
modules/hosts/tomori/rsstt/: _build-system-overrides.nix  _package.nix  default.nix  pyproject.toml
modules/lib/: electron-fix-ime.nix  electron-use-gnome-libsecret.nix
modules/nix/: named-substituters.nix  nix.nix
modules/scripts/: scripts.nix
modules/shell/: carapace.nix  pay-respects.nix  zoxide.nix
modules/xdg/: xdg-user-dirs.nix
secrets/: acme-env.age  kavita.age  nix-access-tokens.age  rssbot-env.age  rsstt-dot-env.age  xray-json.age
(+67 files in other folders)
