[project]
name = "rsstt"
version = "2.10.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich==0.8.1",
    "aiographfix==0.2.2",
    "aiohttp-retry==2.9.1",
    "aiohttp-socks==0.10.1",
    "aiohttp[speedups]==3.11.16",
    "apscheduler==3.11.0",
    "asyncpg==0.30.0",
    "asyncstdlib==3.13.1",
    "beautifulsoup4==4.12.3",
    "cachetools==5.5.2",
    "cjkwrap==2.2",
    "colorlog==6.9.0",
    "cryptg==0.5.0.post0",
    "dnspython[idna]==2.7.0",
    "emoji==2.14.1",
    "feedparser==6.0.11",
    "isal==1.7.2 ; platform_machine == 'AMD64' or platform_machine == 'aarch64' or platform_machine == 'x86_64'",
    "listparser[lxml]==0.20",
    "lxml==5.3.2",
    "matplotlib==3.9.4",
    "minify-html==0.16.4",
    "minify-html-onepass==0.16.4",
    "multidict==6.4.3",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "python-dotenv==1.1.0",
    "python-socks[asyncio]==2.7.1",
    "rapidfuzz==3.13.0",
    "telethon==1.39.0",
    "tortoise-orm[accel]==0.24.2",
    "typing-extensions==4.13.2",
    "uvloop==0.21.0 ; sys_platform != 'cli' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "yarl==1.19.0",
]

[project.scripts]
rsstt = "rsstt.entrypoint:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
